# council-meeting-analyzer

./: .gitignore  pyproject.toml
.github/workflows/: deploy-site.yml
data/minutes/: 1196_minutes.json  1196_minutes.txt  904_minutes.json  904_minutes.txt  909_minutes.json  909_minutes.txt  910_minutes.json  910_minutes.txt  913_minutes.json  913_minutes.txt  914_minutes.json  914_minutes.txt  916_minutes.json  916_minutes.txt  917_minutes.json  917_minutes.txt  919_minutes.json  919_minutes.txt  921_minutes.json  921_minutes.txt  922_minutes.json  922_minutes.txt  924_minutes.json  924_minutes.txt  926_minutes.json  926_minutes.txt  929_minutes.json  929_minutes.txt  930_minutes.json  930_minutes.txt  933_minutes.json  933_minutes.txt  937_minutes.json  937_minutes.txt  943_minutes.json  943_minutes.txt  945_minutes.json  945_minutes.txt  946_minutes.json  946_minutes.txt  (+4 more)
public-site/: .gitignore  astro.config.mjs  package-lock.json  package.json  playwright.config.js
public-site/reports/: action-items.json  summary.md
public-site/scripts/: export_public_data.py
scripts/: check_status.py  compare_diarization.py  compare_models.py  contrast_report.py  dashboard.py  fix_hallucinations.py  fix_transcript_hallucinations.py  identify_speakers.py  parse_minutes.py  quote_extractor.py  run_analyze.py  run_diarize.py  run_diarize_batch.py  run_diarize_continuous.py  run_discovery.py  run_download.py  run_pipeline.py  run_pyannote_batch.py  run_transcribe.py  run_validate.py  setup_environment.py  test_pyannote_api.py  voting_alignment.py
(+269 files in other folders)
