[project]
name = "council-meeting-analyzer"
version = "0.1.0"
description = "Chico City Council meeting transcription and analysis pipeline"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "mlx-whisper>=0.4",
    "ollama>=0.4",
    "pydantic>=2.0",
    "rich>=13.0",
    "jiwer>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
# Note: pyannote diarization requires torch which needs Python <=3.13
# Install separately with: pip install pyannote.audio torch torchaudio

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/council_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
